My Process cards fixed. Had a wrong width value

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -175,7 +175,7 @@ root {
 .c-button-2 {
   color: #FF4F3C;
   background-color: none;
-  border: 2px solid #FF4F3C;
+  border: none;
   border-radius: 100px;
   display: flex;
   align-items: center;
@@ -186,7 +186,9 @@ root {
   letter-spacing: 0.5px;
   text-decoration: none;
   transition: background-color 300ms, box-shadow 300ms, transform 300ms, border 300ms;
-  transition-timing-function: ease-in-out; }
+  transition-timing-function: ease-in-out;
+  border-style: inset;
+  border: 2px solid #FF4F3C; }
   .c-button-2:hover {
     color: #FF4F3C;
     background: #FAD7D3;
@@ -1379,7 +1381,7 @@ body {
   @media (max-width: 991px) {
     .c-process_cards {
       flex-flow: column;
-      max-width: 100%;
+      width: 100%;
       margin-left: 1rem; } }
   @media (max-width: 425px) {
     .c-process_cards {
@@ -1398,6 +1400,7 @@ body {
   @media (max-width: 991px) {
     .c-process_cards-content {
       max-width: 100%;
+      width: 100%;
       display: flex;
       align-items: center;
       flex-direction: column; } }
@@ -1409,7 +1412,7 @@ body {
   @media (max-width: 991px) {
     .cc-process_cards-col_1 {
       position: static;
-      margin-right: 0;
+      margin-right: 0rem;
       max-width: 100%; } }
 
 .c-process_cards-img {
