--- a/SCSS/Sections/process.scss
+++ b/SCSS/Sections/process.scss
@@ -65,7 +65,7 @@
 
     @media (max-width:991px) {
         flex-flow: column;
-        max-width: 100%;
+        width: 100%;
         margin-left: 1rem;
     }
 
@@ -87,6 +87,7 @@
 
     @media (max-width:991px) {
         max-width: 100%;
+        width: 100%;
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -100,7 +101,7 @@
 
     @media (max-width:991px) {
         position: static;
-        margin-right: 0;
+        margin-right: 0rem;
         max-width: 100%;
         
     }
